--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,7 +34,6 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #202020;
-    --foreground: #ededed;
   }
 }
 
@@ -44,34 +43,38 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background-color: rgb(31, 31, 31);
+  background-image: linear-gradient(to bottom, transparent 95%, #0e0e0e 95%),
+                    linear-gradient(to right, transparent 95%, #141414 95%);
+  background-size: 10px 10px, 10px 10px;
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
-  outline-style: solid;
-  outline-width: 0.5px;
-  outline-color: rgb(235, 235, 235);
+  border-style: solid;
+  border-color: rgb(235, 235, 235);
   cursor: pointer;
 }
 button:hover {
-  outline-color: rgb(98, 0, 255);
+  border-color: rgb(98, 0, 255);
+  border-width: 1px;
   scale: 105%;
 }
 
 select {
-  outline-style: solid;
-  outline-width: 2px;
-  outline-color: rgb(235, 235, 235);
+  border-style: solid;
+  border-color: rgb(235, 235, 235);
   cursor: pointer;
 }
 select:hover {
-  outline-color: rgb(98, 0, 255);
+  border-width: 1px;
+  border-color: rgb(98, 0, 255);
 }
 
 
 .square-background {
+  height: 100%;
   background-image: linear-gradient(to bottom, transparent 95%, #0e0e0e 60%),
                     linear-gradient(to right, transparent 95%, #141414 60%);
   background-size: 10px 10px, 10px 10px;
